fixed router bug

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "np-app-test",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://mars-27.github.io/np-app-test",
+  "homepage": "https://mars-27.github.io/np-app-test/",
   "dependencies": {
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
