--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "@mui/material": "^5.11.12",
     "@reduxjs/toolkit": "^1.9.3",
     "axios": "^1.3.4",
+    "i18next": "^22.4.14",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.5",
+    "react-i18next": "^12.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
